// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonGroup Rendering Snapshot 1`] = `
<div
  className="Button-group"
>
  <span
    className="Button-group__item"
    key="0"
  >
    <Button
      key=".$0"
      label="test 1"
      onClick={[MockFunction]}
      type="button"
    />
  </span>
  <span
    className="Button-group__item Button-group__item--separator-small"
    key="1"
  >
    <Button
      key=".$1"
      label="test 2"
      onClick={[MockFunction]}
      type="button"
    />
  </span>
  <span
    className="Button-group__item Button-group__item--separator-small"
    key="2"
  >
    <Button
      key=".$2"
      label="test 3"
      onClick={[MockFunction]}
      type="button"
    />
  </span>
</div>
`;

exports[`Test ButtonGroup Rendering Snapshot with separator 1`] = `
<div
  className="Button-group"
>
  <span
    className="Button-group__item"
    key="0"
  >
    <Button
      key=".$0"
      label="test 1"
      onClick={[MockFunction]}
      type="button"
    />
  </span>
  <span
    className="Button-group__item Button-group__item--separator-medium"
    key="1"
  >
    <Button
      key=".$1"
      label="test 2"
      onClick={[MockFunction]}
      type="button"
    />
  </span>
  <span
    className="Button-group__item Button-group__item--separator-medium"
    key="2"
  >
    <Button
      key=".$2"
      label="test 3"
      onClick={[MockFunction]}
      type="button"
    />
  </span>
</div>
`;
